updated colors, fixed btn alignement and hover states

--- a/styles/temp.css
+++ b/styles/temp.css
@@ -49,9 +49,10 @@ main {
 
 .header {
     display: flex;
+    align-items: end;
     flex-wrap: wrap;
     row-gap: 1rem;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
     color: #ffffff;
     font-size: 2rem;
     line-height: 1.1;
@@ -67,11 +68,10 @@ main {
     align-items: center;
     background-color: #ffffff;
     border: none;
-    margin-top: auto;
     color: black;
     padding: 1rem 2rem;
     min-width: 6rem;
-    max-height: 1.5rem;
+    max-height: 1.25rem;
     cursor: pointer;
     font-size: 1.4rem;
     border-radius: 2rem;
@@ -89,8 +89,8 @@ main {
 
 .project {
     padding: 2.3rem;
-    border: solid rgba(255, 255, 255, 0.3) 1px;
-    box-shadow: inset 0px 0px 15px 0px rgba(255, 255, 255, 0.5), 0px 0px 5px 0px rgba(255, 255, 255, 0.4);;
+    border: solid rgba(255, 255, 255, 0.2) 1px;
+    box-shadow: inset 0px 0px 10px 0px rgba(255, 255, 255, 0.3), 0px 0px 2px 0px rgba(255, 255, 255, 0.4);;
     border-radius: 1rem;
     min-width: none;
     backdrop-filter: blur(2px);
@@ -209,10 +209,10 @@ main {
     width: auto;
     padding-block: .6rem;
     padding-inline: 1rem;
-    color: rgba(255, 255, 255, 50%);
+    color: rgba(255, 255, 255, 70%);
     font-weight: bold;
     cursor: pointer;
-    transition: 150ms ease-in-out;
+    transition: 150ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .next {
@@ -221,7 +221,8 @@ main {
 
 .prev:hover,
 .next:hover {
-    color: rgba(255, 255, 255, 90%);
+    color: rgba(255, 255, 255, 95%);
+    scale: 1.05;
 }
 
 footer {
